# Random-Number-Generator

./: .gitignore  README-chinese.md  README.md  main.py  main_easy.py  main_pro.py  pyproject.toml  pytest.ini
.github/: build-windows.yml
.github/workflows/: build-windows.yml  manual_build.yml
AppData/: data.json
AppData/language/: Deutsch.json  English.json  Español.json  Français.json  中文 (简体).json  中文 (繁體).json  日本語.json  한국어.json
AppData/style/: Cyber.css  Dark.css  Lavender.css  Nord.css  Sunset.css
Classes/: example.csv
RandomStudentNumverGenerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Web/: coming-script.js  coming-soon.html  coming-style.css  index.html  script.js  scripts.js  style.css  styles.css
data/: 706.csv
src/: __init__.py  __main__.py  animation.py  app.py  constant.py  edge_hider.py  logger.py  picker.py  rect.py  tools.py  ui.py
test/: README.md  conftest.py  test_constant.py  test_picker.py  test_tools.py
